@@ -87,23 +87,10 @@ _demoPngs = ["overview", "recent", "frame", "dialog", "moredialog", "core",
 _treeList = [
     # new stuff
     ('Recent Additions/Updates', [
-        'RendererNative',
-        'PlateButton',
-        'SpinCtrlDouble',
-        'DVC_DataViewModel',
-        'DVC_IndexListModel',
-        'DVC_ListCtrl',
-        'DVC_TreeCtrl',
-        'Cairo',
-        'Cairo_Snippets',
-        'PropertyGrid',
-        'SystemSettings',
-        'GridLabelRenderer',
-        'InfoBar',
-        'WrapSizer',
-        ##'UIActionSimulator',
-        'GraphicsGradient',
+        'UIActionSimulator',
         'PDFViewer',
+        'ItemsPicker',
+        'CommandLinkButton',
         ]),
 
     # managed windows == things with a (optional) caption you can close
@@ -148,6 +135,7 @@ _treeList = [
         'CheckListBox',
         'Choice',
         'ComboBox',
+        'CommandLinkButton',
         'DVC_ListCtrl',
         'DVC_DataViewModel.py',
         'DVC_IndexListModel',
@@ -203,6 +191,7 @@ _treeList = [
         'Editor',
         'GenericButtons',
         'GenericDirCtrl',
+        'ItemsPicker',
         'LEDNumberCtrl',
         'MultiSash',
         'PlateButton',
@@ -338,7 +327,7 @@ _treeList = [
         'Sound',
         'StandardPaths',
         'SystemSettings',
-        ##'UIActionSimulator',
+        'UIActionSimulator',
         'Unicode',
         ]),
 
